# getogrand-hypermedia

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  cdk.context.json  cdk.json  cdkapp.py  compose.base.yaml  compose.local.yaml  compose.prod.yaml  docker-compose.yaml  gunicorn.conf.py  manage.py  pyproject.toml
.railway/: db.railway.json
cdk/: cdkapp.py  cdkapp_enterprisy.py
dockerfiles/: app.Dockerfile  caddy.Dockerfile  postgres.Dockerfile
getogrand_hypermedia/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
main/: admin.py  forms.py  middlewares.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_duty_end_alter_duty_start_alter_experience_end_and_more.py  0003_experience_story.py  0004_alter_profile_email.py
main/templates/main/: index.html
theme/static/js/: bundle.tracing.replay.min.js.map  sentry.browser.8.10.0.min.js
theme/static/pwa/: manifest.json
theme/static_src/: tailwind.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
