[project]
name = "getogrand-hypermedia"
version = "0.1.0"
description = "getogrand's hypermedia collection"
authors = [{ name = "Wonyoung Ju", email = "getogrand@hey.com" }]
dependencies = ["django>=5.0.4", "psycopg[binary]>=3.1.18", "daphne>=4.1.2"]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "aws-cdk-lib>=2.140.0",
]

[tool.rye.scripts]
dev = "docker compose -f compose.base.yaml -f compose.local.yaml up"
prod = "docker compose up -f compose.base.yaml -f compose.prod.yaml"
manage = "docker compose -f compose.base.yaml -f compose.local.yaml run app python manage.py"
shell = "docker compose -f compose.base.yaml -f compose.local.yaml run app python manage.py shell"
build = "docker compose -f compose.base.yaml -f compose.prod.yaml build"
push = "docker compose -f compose.base.yaml -f compose.prod.yaml push"
